fixed sizes of nav, body and controls they add up to 100vh added overflow to body for scrolling burger body

--- a/src/components/controls/burgerBody/burgerBody.css
+++ b/src/components/controls/burgerBody/burgerBody.css
@@ -12,5 +12,6 @@
 }
 
 .overflow{
+  height: 58vh;
   overflow: auto;
 }
