--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,6 +2,10 @@
   background-color: #703b09;
 }
 
+.nav-height{
+  height: 7vh;
+}
+
 .white{
   color: white;
 }
